# win-security-identifier

./: Cargo.toml  LICENSE-APACHE-2.0  README.md  build.rs  codecov.yml  deny.toml
.github/action/: build-and-check-nostd.yml
.github/actions/no_std/build-and-check-nostd/: action.yml  check.nu
.github/actions/no_std/build-nostd/: action.yml
.github/actions/no_std/check-nostd/: action.yml
.github/workflows/: ci.yml  release-and-deploy.yml  release-checks.yml
.github/workflows/ci/no_std/: build.nu  check.nu  detect.nu  lib.nu
.github/workflows/ci/nostd/: check.nu
macro/: Cargo.toml  README.md
macro/src/: core.rs  lib.rs
parsing/: Cargo.toml  README.md
parsing/src/: lib.rs
src/: const_sid.rs  domain_and_name.rs  internal.rs  lib.rs  polyfills_ptr.rs  polyfils_ptr.rs  security_identifier.rs  serde_impl.rs  sid.rs  sid_identifier_authority.rs  sid_size_info.rs  sid_type.rs  stack_sid.rs  utils.rs  well_known.rs
src/ext/: mod.rs
src/ext/windows/: get_current_sid.rs  mod.rs
src/security_identifier/: maybe_uninit.rs  sid_size_info.rs  token_error.rs
src/sid/: windows.rs
src/sid/windows/: get_current_ext.rs  sid_lookup.rs
src/sid/windows/sid_lookup/: error.rs  sid_lookup_operation.rs
src/sid_lookup/: mod.rs  sid_lookup_operation.rs  sid_lookup_result.rs
tests/: current_sid.rs
tests/assets/: get_sid_account.ps1
