[workspace]
members = [".", "parsing", "macro"]
resolver = "2"

[workspace.dependencies]
arrayvec = "0.7"
thiserror = "2"
parsing = { path = "parsing", package = "win-security-identifier-parsing" }
sid_macro = { path = "macro", package = "win-security-identifier-macro" }


[package]
name = "win-security-identifier"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["alloc", "dep:smallvec"]
alloc = []
macro = ["dep:sid_macro"]
serde = ["dep:serde", "dep:arrayvec"]

[dependencies]
cfg-if = "1"
delegate = "0.13"
serde = { version = "1", optional = true }
parsing = { workspace = true }
thiserror = { workspace = true }
arrayvec = { workspace = true, optional = true }
num_enum = "0.7"
sid_macro = { workspace = true, optional = true }


[target.'cfg(windows)'.dependencies]
widestring = "1.0"
smallvec = { version = "1.15", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60"
features = [
  "Win32_Foundation",
  "Win32_Security_Authorization",
  "Win32_Security",
  "Win32_System_Threading",
]


[dev-dependencies]
serde = { version = "1", features = ["derive"] }
proptest = "1.7.0"
serde_json = "1"
serde_test = "1"


[build-dependencies]
autocfg = "1.5.0"
version_check = "0.9.5"
