[package]
name = "win-security-identifier-macro"
keywords = ["windows", "macro", "sid", "security-identifier", "acl", "sddl"]
description = "Proc macro for the win-security-identifier project"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories = ["os::windows-apis", "parser-implementations", "data-structures"]

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
parsing = { workspace = true }
proc-macro-crate = "3"

[lints]
workspace = true
