[package]
name = "win-security-identifier-parsing"
description = "Core parsing processing for the win-security-identifier project do not use it directly use win-security-identifier instead"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["windows", "sid", "security-identifier", "acl", "sddl"]
categories = ["os::windows-apis", "parser-implementations", "data-structures"]

[dependencies]
arrayvec = { workspace = true, default-features = false }
thiserror = { workspace = true }

[lints]
workspace = true
